--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@ layout: default
 title: Milkshake Apps
 ---
 
-<div class="home">
-  <img src="{{ site.url }}/assets/images/Logo.png" class="logo">
-  <div>
-    <h1 class="text-primary">Milkshake Apps</h1>
+<div class="home row">
+  <!-- <div class="col-10 col-sm-6"> -->
+    <img src="{{ site.url }}/assets/images/Logo.png" class="logo">
+  <!-- </div> -->
+  <div class="col-sm-12 col-md-auto">
+    <h1>Milkshake Apps</h1>
     <h2>Apps that make your life shake!</h2>
   </div>
 </div>
